osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_top_level_under_not_rejected.txt
error: `CountOver` must be top-level
--> main.sml:1:13
     |
   1 | Query = not (CountOver(predicate=UserLoginIp == '1.1.1.1', window='10m') >= 10)
     |              ^ `CountOver(...) <op> N` must be the outermost filter expression, or one conjunct of a top-level `AND` (no `NOT`, `OR`, or function-argument nesting)